<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/txtAssociation"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sc"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@color/app_name"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/idBtnHis"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/inder"
        android:text="@string/historia"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/idBtnGuia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAssociation"
        tools:ignore="MissingConstraints,SpUsage,TextSizeCheck" />

    <Button
        android:id="@+id/idBtnGuia"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/inder"
        android:text="@string/guia"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/idBtnDev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnHis"
        tools:ignore="MissingConstraints,SpUsage,TextSizeCheck" />

    <Button
        android:id="@+id/idBtnDev"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/inder"
        android:text="@string/devs"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/idBtnQuiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnGuia"
        tools:ignore="MissingConstraints,SpUsage,TextSizeCheck" />

    <Button
        android:id="@+id/idBtnQuiz"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginBottom="176dp"
        android:fontFamily="@font/inder"
        android:text="@string/quiz"
        android:textColor="@color/white"
        android:background="@drawable/btn"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnDev"
        tools:ignore="SpUsage,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>