<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegundaFase"
    android:background="@drawable/gradient_background">

    <ImageButton
        android:id="@+id/imgBtnVoltar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="340dp"
        android:layout_marginBottom="642dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/idTxtSegunda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inder"
        android:text="@string/segunda"
        android:textAlignment="center"
        android:textColor="@color/DarkBlue"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="HardcodedText,SpUsage,TextContrastCheck,TextSizeCheck" />

    <ImageView
        android:id="@+id/imgSegundaF"
        android:layout_width="264dp"
        android:layout_height="166dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxtSegunda"
        app:srcCompat="@drawable/segunda_fase"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/idTxtLab"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="181dp"
        android:fontFamily="@font/imprima"
        android:text="@string/NomeSegunda"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSegundaF"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/idTxtDesc2"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:text="@string/Descricao"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxtLab"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/idTxtSegundoP"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Desc2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxtDesc2"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/idTxtPFinal"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ParagrafoFinal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxtSegundoP"
        app:layout_constraintVertical_bias="0.168"
        tools:ignore="SpUsage,TextContrastCheck,TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>