<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TerceiraFase"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/idTxtTerceira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inder"
        android:text="@string/terceira"
        android:textAlignment="center"
        android:textColor="@color/DarkBlue"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="HardcodedText,SpUsage,TextContrastCheck,TextSizeCheck" />

    <ImageView
        android:id="@+id/imgTerceiraF"
        android:layout_width="264dp"
        android:layout_height="166dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxtTerceira"
        app:srcCompat="@drawable/terceira_fase"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/txtNomeTerceira"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="181dp"
        android:fontFamily="@font/imprima"
        android:text="@string/NomeTerceira"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTerceiraF"
        tools:ignore="SpUsage,TextContrastCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/txtParagrafo1"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:text="@string/paragrafo1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeTerceira"
        tools:ignore="HardcodedText,SpUsage,TextContrastCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/txtParagrafo2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/paragrafo2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtParagrafo1"
        tools:ignore="HardcodedText,SpUsage,TextContrastCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/txtParagrafo3"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/paragrafo3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtParagrafo2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,SpUsage,TextContrastCheck,TextSizeCheck" />

    <ImageButton
        android:id="@+id/imgBtnVoltar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>