<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Desenvolvedores"
    android:background="@drawable/gradient_background">


            <ImageButton
                android:id="@+id/imgBtnHomeD"
                android:layout_width="58dp"
                android:layout_height="43dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="165dp"
                android:contentDescription="@string/menuImgBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/menu"
                tools:ignore="RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView

                android:id="@+id/txtDevs"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inder"
                android:gravity="center"
                android:text="@string/devs"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@color/app_name"
                android:textSize="22dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.095"
                tools:ignore="SpUsage,TextSizeCheck" />


            <TextView
                android:id="@+id/txtDiogo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="63dp"
                android:fontFamily="@font/inria_sans_bold"
                android:text="@string/Diogo"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDevs"
                tools:ignore="HardcodedText,SpUsage,TextContrastCheck,TextSizeCheck" />

            <TextView
                android:id="@+id/txtJeff"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/inria_sans_bold"
                android:text="@string/Jeff"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDiogo"
                tools:ignore="HardcodedText,SpUsage,TextContrastCheck,TextSizeCheck" />


            <TextView
                android:id="@+id/txtDescDevs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/DescDevs"
                android:textAlignment="center"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtJeff"
                app:layout_constraintVertical_bias="0.029"
                tools:ignore="HardcodedText,SpUsage,TextContrastCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/txtRepositorio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/alegreya_sc"
        android:text="@string/repositorio"
        android:textAlignment="center"
        android:textColor="#000C4E"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imgBtnGit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescDevs"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imgBtnGit"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="228dp"
        android:contentDescription="TODO"
        android:onClick="onClickRepositorio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescDevs"
        app:layout_constraintVertical_bias="0.336"
        app:srcCompat="@drawable/github"
        tools:ignore="ContentDescription,HardcodedText,MissingConstraints" />


    <TextView
        android:id="@+id/txtEscola2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sc"
        android:text="@string/escola"
        android:textAlignment="center"
        android:textColor="@color/maroon"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imgBtnLoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <ImageButton
        android:id="@+id/imgBtnLoc"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickLocEscola"
        app:layout_constraintBottom_toTopOf="@+id/txtPerfilGit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_map"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView

        android:id="@+id/txtPerfilGit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sc"
        android:text="@string/Perfil"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnDiogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,SpUsage,TextContrastCheck,TextSizeCheck" />

    <Button
        android:id="@+id/btnDiogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn"
        android:onClick="onClickDiogo"
        android:text="@string/Diogo"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/btnJeff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnLoc"
        tools:ignore="DuplicateSpeakableTextCheck,SpUsage,TextSizeCheck" />

    <Button
        android:id="@+id/btnJeff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:background="@drawable/btn"
        android:onClick="onClickJeff"
        android:text="@string/Jeff"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDiogo"
        tools:ignore="DuplicateSpeakableTextCheck,SpUsage,TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>